[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-observe"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Internal dependencies
infera-types = { path = "../infera-types" }

anyhow = { workspace = true }
axum = { workspace = true, optional = true }
chrono = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = "0.12"
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = []
http-api = ["axum"]
