[package]
name = "infera-repl"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
base64 = "0.21"

# Internal dependencies
infera-types = { path = "../infera-types" }
infera-store = { path = "../infera-store" }
infera-observe = { path = "../infera-observe" }
infera-api = { path = "../infera-api" }

# gRPC for replication
tonic = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
