[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-repl"
rust-version.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
infera-api = { path = "../infera-api" }
infera-const = { path = "../infera-const" }
infera-observe = { path = "../infera-observe" }
infera-store = { path = "../infera-store" }
infera-types = { path = "../infera-types" }

# gRPC for replication
tonic = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
