[package]
name = "infera-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }

# Storage backends
foundationdb = { workspace = true, optional = true }

# Internal dependencies
infera-types = { path = "../infera-types" }
infera-observe = { path = "../infera-observe" }

[dev-dependencies]
tokio-test = "0.4"
criterion = { workspace = true }
proptest = { workspace = true }
infera-test-fixtures = { path = "../infera-test-fixtures" }

[[bench]]
name = "memory_backend"
harness = false

[features]
default = []
fdb = ["foundationdb"]
# Enable integration tests that require a running FoundationDB instance
fdb-integration-tests = ["fdb"]
