[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-store"
version.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Storage backends
foundationdb = { workspace = true, optional = true }

# Internal dependencies
infera-observe = { path = "../infera-observe" }
infera-types = { path = "../infera-types" }

[dev-dependencies]
criterion = { workspace = true }
infera-test-fixtures = { path = "../infera-test-fixtures" }
proptest = { workspace = true }
tokio-test = "0.4"

[features]
default = []
fdb = ["foundationdb"]
# Enable integration tests that require a running FoundationDB instance
fdb-integration-tests = ["fdb"]
