[package]
name = "infera-test-fixtures"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Core types
infera-types = { path = "../infera-types" }

# Auth types
infera-auth = { path = "../infera-auth" }

# JWT and crypto
jsonwebtoken = { workspace = true }
ed25519-dalek = "2.1"
rand = "0.8"
base64 = "0.22"
uuid = "1.10"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
