[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-test-fixtures"
publish.workspace = true
version.workspace = true

[dependencies]
# Core types
infera-types = { path = "../infera-types" }

# Auth types
infera-auth = { path = "../infera-auth" }

# JWT and crypto
base64 = "0.22"
chrono = { workspace = true }
ed25519-dalek = "2.1"
jsonwebtoken = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.10"
