[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-test-fixtures"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Core types
infera-types = { path = "../infera-types" }

# Auth types
infera-auth = { path = "../infera-auth" }

# JWT and crypto
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = "1.10"
