[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-types"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
