[package]
name = "infera-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
wasmtime = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

# Internal dependencies
infera-observe = { path = "../infera-observe" }

[dev-dependencies]
tokio-test = "0.4"
wat = "1.0"
