[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "infera-wasm"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wasmtime = { workspace = true }

# Internal dependencies
infera-observe = { path = "../infera-observe" }

[dev-dependencies]
tokio-test = "0.4"
wat = "1.0"
