[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-api"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-utils = []

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
toon = "0.1.2"
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors"] }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }

# gRPC dependencies
async-stream = "0.3"
futures = { workspace = true }
pin-project = "1.1"
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14"
tonic-reflection = "0.14.2"

# Internal dependencies
inferadb-auth = { path = "../inferadb-auth" }
inferadb-cache = { path = "../inferadb-cache" }
inferadb-config = { path = "../inferadb-config" }
inferadb-const = { path = "../inferadb-const" }
inferadb-core = { path = "../inferadb-core" }
inferadb-discovery = { path = "../inferadb-discovery" }
inferadb-observe = { path = "../inferadb-observe" }
inferadb-store = { path = "../inferadb-store" }
inferadb-types = { path = "../inferadb-types" }
inferadb-wasm = { path = "../inferadb-wasm" }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14"

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
inferadb-test-fixtures = { path = "../inferadb-test-fixtures" }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
portpicker = "0.1"
proptest = "1.5"
rand = { workspace = true }
rand_core = { version = "0.9", features = ["getrandom"] }
tempfile = "3.8"
tokio-test = "0.4"
uuid = "1.10"
warp = { version = "0.4.2", features = ["server"] }

[[bench]]
harness = false
name = "api_throughput"
