[package]
authors.workspace = true
description = "Authentication and authorization for InferaDB"
edition.workspace = true
license.workspace = true
name = "inferadb-auth"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
async-trait = "0.1"
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
pem = "3.0"
prometheus = { version = "0.14", default-features = false }
rand = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Optional dependencies
redis = { version = "0.32.7", features = [
  "connection-manager",
  "tokio-comp",
], optional = true }

# Internal dependencies
inferadb-config = { path = "../inferadb-config" }
inferadb-discovery = { path = "../inferadb-discovery" }
inferadb-observe = { path = "../inferadb-observe" }
inferadb-types = { path = "../inferadb-types" }

[dev-dependencies]
axum = { workspace = true }
futures = { workspace = true }
proptest = "1.4"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"

[features]
default = []
replay-protection = ["redis"]
