[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-bin"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "inferadb_bin"
path = "src/lib.rs"

[[bin]]
name = "inferadb-server"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
moka = { workspace = true }
rustls = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
inferadb-api = { path = "../inferadb-api" }
inferadb-auth = { path = "../inferadb-auth" }
inferadb-cache = { path = "../inferadb-cache" }
inferadb-config = { path = "../inferadb-config" }
inferadb-core = { path = "../inferadb-core" }
inferadb-observe = { path = "../inferadb-observe" }
inferadb-store = { path = "../inferadb-store" }
inferadb-types = { path = "../inferadb-types" }
inferadb-wasm = { path = "../inferadb-wasm" }

[dev-dependencies]
futures = { workspace = true }
