[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-cache"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
moka = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal dependencies
inferadb-observe = { path = "../inferadb-observe" }
inferadb-store = { path = "../inferadb-store" }
inferadb-types = { path = "../inferadb-types" }

[dev-dependencies]
criterion = { workspace = true }
tokio-test = "0.4"

[[bench]]
harness = false
name = "cache_operations"
