[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-core"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
async-recursion = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Parser options (choose one)
pest = "2.7"
pest_derive = "2.7"
# nom = "7.1"

# Internal dependencies
inferadb-cache = { path = "../inferadb-cache" }
inferadb-const = { path = "../inferadb-const" }
inferadb-observe = { path = "../inferadb-observe" }
inferadb-store = { path = "../inferadb-store" }
inferadb-types = { path = "../inferadb-types" }
inferadb-wasm = { path = "../inferadb-wasm" }

[dev-dependencies]
criterion = { workspace = true }
inferadb-test-fixtures = { path = "../inferadb-test-fixtures" }
proptest = { workspace = true }
tokio-test = "0.4"
wat = "1.0"

[[bench]]
harness = false
name = "ipl_parser"

[[bench]]
harness = false
name = "evaluator"
