[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
name = "inferadb-engine-api"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
test-utils = []
# Enable full fuzz test suite (50-500 iterations instead of 5)
test-full = ["inferadb-engine-test-fixtures/test-full"]

[dependencies]
anyhow = { workspace = true }
bon = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
hex = "0.4"
moka = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }
tokio = { workspace = true }
toon = "0.1.2"
tower = { workspace = true }
tower-http = { workspace = true, features = ["compression-gzip", "cors"] }
tower_governor = { workspace = true }
tracing = { workspace = true }
urlencoding = "2.1"
uuid = { version = "1.10", features = ["v4"] }

# gRPC dependencies
async-stream = "0.3"
futures = { workspace = true }
pin-project = "1.1"
prost = "0.14.1"
tonic = "0.14.2"
tonic-prost = "0.14"
tonic-reflection = "0.14.2"


# Internal dependencies
inferadb-engine-auth = { path = "../inferadb-engine-auth" }
inferadb-engine-cache = { path = "../inferadb-engine-cache" }
inferadb-engine-config = { path = "../inferadb-engine-config" }
inferadb-engine-const = { path = "../inferadb-engine-const" }
inferadb-engine-core = { path = "../inferadb-engine-core" }
inferadb-engine-observe = { path = "../inferadb-engine-observe" }
inferadb-engine-repository = { path = "../inferadb-engine-repository" }
inferadb-engine-store = { path = "../inferadb-engine-store" }
inferadb-engine-types = { path = "../inferadb-engine-types" }
inferadb-engine-wasm = { path = "../inferadb-engine-wasm" }

# Shared storage abstraction
inferadb-storage = { path = "../../../common/crates/inferadb-storage" }

# Ledger backend (for cache invalidation)
inferadb-storage-ledger = { path = "../../../common/crates/inferadb-storage-ledger" }

# Ledger SDK (for WatchBlocks cache invalidation)
inferadb-ledger-sdk = { path = "../../../ledger/crates/sdk" }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14"

[dev-dependencies]
base64 = { workspace = true }
chrono = { workspace = true }
criterion = { workspace = true }
ed25519-dalek = { workspace = true }
inferadb-engine-test-fixtures = { path = "../inferadb-engine-test-fixtures" }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
portpicker = "0.1"
proptest = "1.5"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tempfile = "3.8"
uuid = "1.10"

[[bench]]
harness = false
name = "api_throughput"

[[test]]
name = "ledger_integration"
path = "tests/ledger_integration.rs"
required-features = ["test-utils"]

[lints]
workspace = true
