[package]
authors.workspace = true
description = "Authentication and authorization for InferaDB"
edition.workspace = true
license.workspace = true
name = "inferadb-engine-auth"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
async-trait = "0.1"
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
hostname = "0.4"
jsonwebtoken = { workspace = true }
moka = { workspace = true }
pem = "3.0"
prometheus = { version = "0.13", default-features = false }
rand = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Internal dependencies
inferadb-engine-config = { path = "../inferadb-engine-config" }
inferadb-engine-control-client = { path = "../inferadb-engine-control-client" }
inferadb-engine-discovery = { path = "../inferadb-engine-discovery" }
inferadb-engine-observe = { path = "../inferadb-engine-observe" }
inferadb-engine-types = { path = "../inferadb-engine-types" }

# FoundationDB (optional)
foundationdb = { workspace = true, optional = true }
inferadb-engine-fdb-shared = { path = "../inferadb-engine-fdb-shared", optional = true }

[dev-dependencies]
axum = { workspace = true }
futures = { workspace = true }
inferadb-engine-control-client = { path = "../inferadb-engine-control-client" }
proptest = "1.4"
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { workspace = true, features = ["full", "test-util"] }
tokio-test = "0.4"

[features]
default = []
# Enable FoundationDB-based Control JWT authentication
fdb = ["foundationdb", "inferadb-engine-fdb-shared"]
