[package]
authors.workspace = true
description = "Authentication and authorization for InferaDB"
edition.workspace = true
license.workspace = true
name = "inferadb-engine-auth"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Workspace dependencies
async-trait = "0.1"
bon = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
moka = { workspace = true }
pem = "3.0"
prometheus = { version = "0.14", default-features = false }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
subtle = "2.6"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

# Internal dependencies
inferadb-engine-config = { path = "../inferadb-engine-config" }
inferadb-engine-observe = { path = "../inferadb-engine-observe" }
inferadb-engine-store = { path = "../inferadb-engine-store" }
inferadb-engine-types = { path = "../inferadb-engine-types" }
inferadb-storage = { path = "../../../common/crates/inferadb-storage" }


[dev-dependencies]
axum = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
inferadb-storage-ledger = { path = "../../../common/crates/inferadb-storage-ledger" }
rand = { workspace = true }
rand_core = { version = "0.6", features = ["getrandom"] }
tokio = { workspace = true, features = ["full", "test-util"] }

[[test]]
name = "signing_key_cache_ledger_integration"
path = "tests/signing_key_cache_ledger_integration.rs"

[features]
default = []

[lints]
workspace = true
