[package]
authors.workspace = true
description = "HTTP client for Engine-to-Control communication"
edition.workspace = true
license.workspace = true
name = "inferadb-engine-control-client"
publish.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# Async runtime
async-trait = "0.1"
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# JWT signing (for ServerIdentity)
base64 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
pem = "3.0"
sha2 = { workspace = true }

# Caching
moka = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }

# UUID for JTI
uuid = { workspace = true }

# Hostname detection
hostname = "0.4"

# Random number generation
rand = { workspace = true }

# Internal dependencies
inferadb-engine-discovery = { path = "../inferadb-engine-discovery" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
